--- a/css/contact.css
+++ b/css/contact.css
@@ -37,15 +37,16 @@ body{
     color: #fff !important;
 }
 .contactus{
-    margin: 10% 10% ;
+    margin: 10% 10% 0% 10% ;
     
 }
 .contactus__row{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    
     
 }
+
 
 .contactus__primary{
     font-size: 52px;
@@ -124,4 +125,103 @@ body{
     text-align: center;
     width: 100%;
     cursor:pointer;
+}
+.item2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-left: 30%;
+    height: 80vh;
+}
+.contactus__text{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+}
+/* social button */
+.contactus__social{
+    margin-right: 10rem;
+}
+.icons{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--black);
+    clip-path: circle(40px);
+    position: relative;
+    transition: all 200ms ease-in-out;
+}
+.icons.open{
+    clip-path: circle(180px);
+
+}
+.FAB{
+    height: 70px;
+    width: 70px;
+    background-color: #0085ff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    font-weight: 800;
+    cursor: pointer;
+    z-index: 99;
+    transition: all 0.2s ease-in-out;
+}
+.FAB:hover{
+    transform: rotate(90deg);
+}
+.icon{
+    position: absolute;
+    height: 60px;
+    width: 60px;
+    background-color: #ffbd00;
+    border-radius: 50%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #08090a;
+    text-decoration: none;
+    font-size: 26px;
+    transition: all 200ms ease-in-out;
+}
+.icons.open .FAB {
+    transform: rotate(45deg);
+}
+.icons.open .icon.call
+{
+transform: translateX(-120px);
+}
+.icons.open .icon.email
+{
+transform: translateX(-84px) translateY(-84px);
+}
+.icons.open .icon.news
+{
+transform: translateY(-120px);
+}
+.icons.open .icon.location
+{
+transform: translateX(84px) translateY(-84px);
+}
+.icons.open .icon.whatsapp
+{
+transform: translateX(120px);
+}
+.icons.open .icon.instagram
+{
+transform: translateX(84px) translateY(84px);
+}
+.icons.open .icon.linked
+{
+transform: translateY(120px);
+}
+.icons.open .icon.youtube
+{
+transform: translateX(-84px) translateY(84px);
 }
