--- a/css/contact.css
+++ b/css/contact.css
@@ -38,7 +38,7 @@ body{
 }
 
 .contactus{
-    margin: 10% 10% 0% 10% ;
+    margin: 5% 5% 0% 5% ;
     
 }
 
@@ -48,7 +48,7 @@ body{
 .contactus__row{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    
     
 }
 
@@ -122,7 +122,7 @@ textarea{
     margin-top: 15px;
     padding: 20px 80px;
     border-radius: 5px;
-    background: var(--yellow);
+    background: var(--blue);
     text-decoration: none;
     color: var(--dark);
     font-size: 18px;
@@ -133,122 +133,8 @@ textarea{
     width: 100%;
     cursor:pointer;
 }
-.item2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    margin-left: 30%;
-    height: 80vh;
-}
-.contactus__text{
-    position: absolute;
-    top: 250px;
-    left: -200px;
-    cursor: default;
-    transition: all .2s ease-in-out;
-    font-family: 'Ubuntu', sans-serif;
-}
-.contactus__text-open{
-    transform: translateY(-150px);
-    opacity: 0;
-   
-}
-.contactus__text-para{
-    font-size: 25px;
-}
-.contactus__text-para:hover .text__span{
-    color: var(--green);
-}
-.contactus__text-para:hover .text__span-1{
-    color: var(--blue);
-}
-/* social button */
-.contactus__social{
-    margin-right: 10rem;
-}
-.icons{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--black);
-    clip-path: circle(40px);
-    position: relative;
-    transition: all 200ms ease-in-out;
-}
-.icons.open{
-    clip-path: circle(180px);
 
-}
-.FAB{
-    height: 70px;
-    width: 70px;
-    background-color: var(--green);
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 32px;
-    font-weight: 800;
-    cursor: pointer;
-    z-index: 99;
-    transition: all 0.2s ease-in-out;
-}
-.FAB:hover{
-    transform: rotate(90deg);
-}
-.icon{
-    position: absolute;
-    height: 60px;
-    width: 60px;
-    background-color: #ffbd00;
-    border-radius: 50%; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #08090a;
-    text-decoration: none;
-    font-size: 26px;
-    transition: all 200ms ease-in-out;
-}
 
-.icons.open .FAB {
-    transform: rotate(45deg);
-}
-.icons.open .icon.call
-{
-transform: translateX(-120px);
-}
-.icons.open .icon.email
-{
-transform: translateX(-84px) translateY(-84px);
-}
-.icons.open .icon.news
-{
-transform: translateY(-120px);
-}
-.icons.open .icon.location
-{
-transform: translateX(84px) translateY(-84px);
-}
-.icons.open .icon.whatsapp
-{
-transform: translateX(120px);
-}
-.icons.open .icon.instagram
-{
-transform: translateX(84px) translateY(84px);
-}
-.icons.open .icon.linked
-{
-transform: translateY(120px);
-}
-.icons.open .icon.youtube
-{
-transform: translateX(-84px) translateY(84px);
-}
 
 /* media query */
 
