--- a/css/contact.css
+++ b/css/contact.css
@@ -38,12 +38,14 @@ body{
 }
 
 .contactus{
-    margin: 5% 5% 0% 5% ;
+   
     
 }
 
 .contactus__item{
     width: 100%;
+    margin: 5% 5%;
+
 }
 .contactus__row{
     display: flex;
@@ -57,6 +59,7 @@ body{
     font-size: 52px;
     font-family: 'Ubuntu', sans-serif;
     cursor: default;
+    margin-top: 5%;
     
 }
 .contactus__primary:hover .contactuss__primary-main{
@@ -66,7 +69,7 @@ body{
 .contactus__con-form{
     background-color: var(--gray    );
     border-radius: 10px;
-    padding: 20px 20px;
+    padding: 20px 20px 40px 20px;
     margin-top: 5%;
 }
 .form__group{
