--- a/Learners.css
+++ b/Learners.css
@@ -1,4 +1,17 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;900&display=swap');
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: 'Montserrat', sans-serif;
+	-webkit-touch-callout: none;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	/* mobile touch-action */
+	scroll-behavior: smooth;
+}
+*::-webkit-scrollbar {
+	display: none;
+}
 html {
 	scroll-behavior: smooth;
 }
@@ -115,7 +128,7 @@ body {
 	background-color: rgb(236, 69, 208);
 }
 .btn:hover {
-	background-color: #03ef62;
+	background-color: white;
 }
 .mainCard_Section {
 	width: 100%;
