--- a/css/contact.css
+++ b/css/contact.css
@@ -44,11 +44,11 @@ body{
 }
 .connect__primary{
     margin-left: 3%;
-    color: var(--middel-purple);
+    color: rgb(236, 69, 208);
     font-weight: 300;
 }
 hr{
-    border: 3px solid #FFFF00;
+    border: 3px solid white;
     
 }
 
@@ -77,7 +77,7 @@ hr{
     
 }
 .contactus__primary:hover .contactuss__primary-main{
-    color: var(--blue);
+    color: rgb(236, 69, 208);
     cursor: default;
 }
 .contactus__con-form{
@@ -144,10 +144,10 @@ textarea{
     margin-top: 15px;
     padding: 20px 80px;
     border-radius: 5px;
-    background: transparent;
-    border: 2px solid var(--main-100);
+    background: rgb(236, 69, 208);
+    /* border: 2px solid var(--main-100); */
     text-decoration: none;
-    color: var(--main-100);
+    color: var(--black);
     font-size: 18px;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 600;
@@ -155,6 +155,7 @@ textarea{
     text-align: center;
     width: 100%;
     cursor:pointer;
+    transition: all 0.7s ease;
 }
 .form__button-btn:hover{
     background-color: var(--white);
@@ -182,8 +183,8 @@ textarea{
     border-bottom: 2px solid var(--yellow);
 }
 .contactus__links:hover{
-    color: var(--yellow);
-    border-bottom: 2px solid var(--blue);
+    color: rgb(236, 69, 208);
+    border-bottom: 2px solid white;
     font-size: 17px;
 }
 
@@ -282,6 +283,9 @@ footer{
     .contactus__primary{
         font-size: 42px;
     }
+    .connect__primary{
+        margin-top: 20%;
+    }
     .form__input{
         font-size: 15px;
     }
@@ -289,5 +293,8 @@ footer{
 @media (max-width:600px){
     .contactus__primary{
         font-size: 32px;
+    }
+    .connect__primary{
+        margin-top: 25%;
     }
 }
